--- a/ui/package.json
+++ b/ui/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
     "immer": "^10.0.4",
     "next": "14.1.4",
     "random-words": "^2.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "unfetch": "^5.0.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
