--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "4.2.11"
 djangorestframework = "3.15.1"
 django-cors-headers = "4.3.1"
+psycopg2-binary = "*"
 
 [dev-packages]
 
