--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,10 @@ version: "3.8"
 
 services:
   node-app:
-    command: sh -c "cd /app && npm i && npm run dev"
+    command: sh -c "cd /app && npm i && npm run dev -- -p 8080"
     image: node:18-alpine
     ports:
-      - "3000:3000"
+      - "0.0.0.0:8080:8080"
     volumes:
       - ./ui:/app
       - node_modules:/app/node_modules
@@ -21,6 +21,7 @@ services:
       - POSTGRES_PASSWORD=admin
       - POSTGRES_HOST=db
       - POSTGRES_PORT=5432
+      - CORS_HOST=http://localhost:8080
     ports:
       - "8000:8000"
     volumes:
